<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context=".MainActivity">

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/subTitle"
        android:numColumns="2"
        android:horizontalSpacing="5sp"
        android:verticalSpacing="5sp"
        android:gravity="center">

    </GridView>

    <Button
        android:id="@+id/sellBtn"
        style="@style/requestSale"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/sellButton"
        android:text="@string/sell"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:layout_below="@+id/gridView1"
        android:onClick="sellBtnClicked"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/main_title"
        android:layout_marginBottom="0dp"/>

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_title"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/mint"
        android:layout_below="@+id/textView1"/>



</RelativeLayout>
